--- a/app/views/current/views/check-answers-theme-eligibility.html
+++ b/app/views/current/views/check-answers-theme-eligibility.html
@@ -15,7 +15,7 @@
 
     <h1 class="govuk-heading-l">Check your answers</h1>
 
-    <h2 class="govuk-heading-m">Theme eligibility checks</h2>
+    <h2 class="govuk-heading-m">Theme eligibility</h2>
 
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
@@ -96,6 +96,21 @@
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="planning-permission">
             Change<span class="govuk-visually-hidden"> planning permission obtained</span>
+          </a>
+        </dd>
+      </div>
+      {% endif %}
+      {% if data['planning-permission'] == "no" %}
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
+          Planning permission to be granted in next six months
+        </dt>
+        <dd class="govuk-summary-list__value">
+          <p class="govuk-body">{{ data['planning-progress'] | capitalize }}</p>
+        </dd>
+        <dd class="govuk-summary-list__actions">
+          <a class="govuk-link" href="planning-progress">
+            Change<span class="govuk-visually-hidden"> planning permission to be granted in next six months</span>
           </a>
         </dd>
       </div>
