--- a/app/views/current/views/farming-type-fail.html
+++ b/app/views/current/views/farming-type-fail.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You're not eligible for a large countryside productivity grant
+  You cannot apply for a large countryside productivity grant
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,12 +14,14 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
-        You're not eligible for a large countryside productivity grant
+        You cannot apply for a large countryside productivity grant
       </h1>
 
-      <p>Large countryside productivity grants are only available to arable and horticultural farming businesses.</p>
+      <p>These grants are only available to arable and horticultural farming businesses.</p>
 
-      <p>Other farming businesses may be supported in future schemes. See <a href="">The large countryside productivity grant guidance</a> for further information.</p>
+      <p>Other farming businesses may be supported in future schemes.</p>
+
+      <!--See <a href="">the large countryside productivity grant guidance</a> for further information.-->
 
     </div>
   </div>
