--- a/app/views/current/views/farming-type.html
+++ b/app/views/current/views/farming-type.html
@@ -35,11 +35,10 @@
                   Horticulture
                 </label>
               </div>
-              <div class="govuk-radios__divider">or</div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="farming-type-3" name="farming-type" type="radio" value="none" {{ checked("farming-type", "none") }}>
                 <label class="govuk-label govuk-radios__label" for="farming-type-3">
-                  None of the above
+                  Other
                 </label>
               </div>
             </div>
