--- a/app/views/current/views/new-business.html
+++ b/app/views/current/views/new-business.html
@@ -19,12 +19,9 @@
           <fieldset class="govuk-fieldset" aria-describedby="new-business-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Are you a new business?
+                Has this business been trading for less than two years?
               </h1>
             </legend>
-            <div id="new-business-hint" class="govuk-hint">
-              A new business has been trading for less than two years
-            </div>
             <div class="govuk-radios govuk-radios--inline">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="new-business" name="new-business" type="radio" value="yes" {{ checked("new-business", "yes") }}>
