--- a/app/views/current/views/planning-permission-fail.html
+++ b/app/views/current/views/planning-permission-fail.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You're not eligible for a large countryside productivity grant
+  You cannot apply for a large countryside productivity grant
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,10 +14,10 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
-        You're not eligible for a large countryside productivity grant
+        You cannot apply for a large countryside productivity grant
       </h1>
 
-      <p>Due to the timescales needed to obtain planning permission, only projects that have already been granted planning permission, or are likely to do so within the next six months are eligible to apply.</p>
+      <p>Planning permission can take a long time to acquire. You can only get a grant is you already have planning permission or expect to get it within six months.</p>
 
     </div>
   </div>
