--- a/app/views/current/views/planning-required.html
+++ b/app/views/current/views/planning-required.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Do you need planning permission for the project?
+  Does this project need planning permission?
 {% endblock %}
 
 {% block beforeContent %}
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Do you need planning permission for the project?
+                Does this project need planning permission?
               </h1>
             </legend>
             <div class="govuk-radios govuk-radios--inline">
