--- a/app/views/current/views/project-start-fail.html
+++ b/app/views/current/views/project-start-fail.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You're not eligible for a large countryside productivity grant
+  You cannot apply for a large countryside productivity grant
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,12 +14,12 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
-        You're not eligible for a large countryside productivity grant
+        You cannot apply for a large countryside productivity grant
       </h1>
 
-      <p>Only projects that have not yet started will be considered for a large countryside productivity grant.</p>
+      <p>Only projects that have not yet started can apply for a grant.</p>
 
-      <p>To view what activities count towards a project that has been started, see <a href="">the large countryside productivity grant guidance</a>.</p>
+      <!--<p>To view what activities count towards a project that has been started, see <a href="">the large countryside productivity grant guidance</a>.</p>-->
 
     </div>
   </div>
