--- a/app/views/current/views/project.html
+++ b/app/views/current/views/project.html
@@ -16,7 +16,7 @@
       <form class="form" action="planning-required" method="post">
 
         <h1 class="govuk-heading-l">
-          Your project
+          Project details
         </h1>
 
         <div class="govuk-form-group">
