--- a/app/views/current/views/tenancy.html
+++ b/app/views/current/views/tenancy.html
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Are your land or premises rented, leased or tenanted?
+                Is the business on land or premises that is rented, leased or tenanted?
               </h1>
             </legend>
             <div class="govuk-radios govuk-radios--inline">
