--- a/app/views/current/views/your-details.html
+++ b/app/views/current/views/your-details.html
@@ -31,7 +31,7 @@
             Email address
           </label>
           <div id="email-hint" class="govuk-hint">
-            We’ll only use this to contact you about your application
+            We will only use this to contact you about this application
           </div>
           <input class="govuk-input" id="email" name="email" type="email" spellcheck="false" aria-describedby="email-hint" autocomplete="email" value="{{ data['email'] }}">
         </div>
@@ -40,7 +40,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="contact-preferences-conditional-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
               <h2 class="govuk-fieldset__heading">
-                Your contact preferences
+                How would you prefer to be contacted?
               </h2>
             </legend>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
