--- a/app/views/current/views/abstraction-licence-fail.html
+++ b/app/views/current/views/abstraction-licence-fail.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You're not eligible for a large countryside productivity grant
+  You cannot apply for a large countryside productivity grant
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,10 +14,10 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
-        You're not eligible for a large countryside productivity grant
+        You cannot apply for a large countryside productivity grant
       </h1>
 
-      <p>Due to the timescales needed to obtain abstraction licence, only projects that have already been granted an abstraction licence are eligible to apply.</p>
+      <p>Due to the time needed to obtain abstraction licence, only projects that have already been granted an abstraction licence are eligible to apply.</p>
 
     </div>
   </div>
