--- a/app/views/current/views/legal-status-fail.html
+++ b/app/views/current/views/legal-status-fail.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You're not eligible for a large countryside productivity grant
+  You cannot apply for a large countryside productivity grant
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,23 +14,25 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
-        You're not eligible for a large countryside productivity grant
+        You cannot apply for a large countryside productivity grant
       </h1>
 
-      <p class="govuk-body">The large countryside productivity grant scheme is only open to businesses which have one of the following legal statuses:</p>
+      <p class="govuk-body">This grant is only open to a business with a legal status of:</p>
 
         <ul class="govuk-list govuk-list--bullet">
-          <li>Sole Trader</li>
-          <li>Partnership</li>
-          <li>Limited Company</li>
-          <li>Trust</li>
-          <li>Limited Liability Partnership</li>
           <li>Charity</li>
-          <li>Community Interest Organisation</li>
-          <li>Public Organisation</li>
+          <li>Community interest organisation</li>
+          <li>Limited company</li>
+          <li>Limited liability partnership</li>
+          <li>Partnership</li>
+          <li>Public organisation</li>
+          <li>Sole trader</li>
+          <li>Trust</li>
         </ul>
 
-      <p>Other types of business may be supported in future schemes. See the <a href="">large countryside productivity grant guidance</a> for further information.</p>
+      <p>Other types of business may be supported in future schemes.</p>
+
+      <!--See <a href="">the large countryside productivity grant guidance</a> for further information.-->
 
     </div>
   </div>
