--- a/app/views/current/views/planning-progress.html
+++ b/app/views/current/views/planning-progress.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Does your tenancy extend beyond six years?
+  e you likely to be granted planning permission within the next six months?
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="tenancy">Back</a>
+  <a class="govuk-back-link" href="planning-required">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -13,25 +13,25 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="/tenancy-length-answer" method="post">
+      <form class="form" action="/planning-progress-answer" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Does the tenancy last until 2026 or after?
+                Are you likely to be granted planning permission within the next six months?
               </h1>
             </legend>
             <div class="govuk-radios govuk-radios--inline">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="tenancy-length" name="tenancy-length" type="radio" value="yes" {{ checked("tenancy-length", "yes") }}>
-                <label class="govuk-label govuk-radios__label" for="tenancy-length">
+                <input class="govuk-radios__input" id="planning-progress" name="planning-progress" type="radio" value="yes" {{ checked("planning-progress", "yes") }}>
+                <label class="govuk-label govuk-radios__label" for="planning-progress">
                   Yes
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="tenancy-length-2" name="tenancy-length" type="radio" value="no" {{ checked("tenancy-length", "no") }}>
-                <label class="govuk-label govuk-radios__label" for="tenancy-length-2">
+                <input class="govuk-radios__input" id="planning-progress-2" name="planning-progress" type="radio" value="no" {{ checked("planning-progress", "no") }}>
+                <label class="govuk-label govuk-radios__label" for="planning-progress-2">
                   No
                 </label>
               </div>
