--- a/app/views/current/views/remaining-costs.html
+++ b/app/views/current/views/remaining-costs.html
@@ -14,13 +14,13 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
-        Your grant funding
+        Grant funding
       </h1>
 
       {% set grantAmount = data['project-cost'] * 0.4 %}
       {% set remainingCosts = data['project-cost'] * 0.6 %}
 
-      <p class="govuk-!-margin-bottom-9">Based on your estimate total project costs of £{{ data['project-cost'] | toFixed(2) | commafy }} you would be eligible for a large countryside productivity grant of up to <strong>£{{ grantAmount | toFixed(2) | commafy }}</strong>.</p>
+      <p class="govuk-!-margin-bottom-9">Based on the estimated total project cost of £{{ data['project-cost'] | toFixed(2) | commafy }} you can apply for a grant of up to <strong>£{{ grantAmount | toFixed(2) | commafy }}</strong>.</p>
 
       <form class="form" action="/remaining-costs-answer" method="post">
 
@@ -28,12 +28,9 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
               <h1 class="govuk-fieldset__heading">
-                Would you be able to meet the remaining costs?
+                Can you pay the remaining project costs of £{{ remainingCosts | toFixed(2) | commafy }}?
               </h1>
             </legend>
-            <div id="remaining-costs-hint" class="govuk-hint">
-              The total you would need to meet is £{{ remainingCosts | toFixed(2) | commafy }}
-            </div>
             <div class="govuk-radios govuk-radios--inline">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="remaining-costs" name="remaining-costs" type="radio" value="yes" {{ checked("remaining-costs", "yes") }}>
@@ -55,7 +52,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
               <h1 class="govuk-fieldset__heading">
-                Will any of these costs be paid for using public money?
+                Will you use public money to pay any of the remaining project costs?
               </h1>
             </legend>
             <div class="govuk-radios govuk-radios--inline">
