--- a/app/views/current/views/start.html
+++ b/app/views/current/views/start.html
@@ -16,10 +16,7 @@
         <a class="govuk-breadcrumbs__link" href="https://www.gov.uk">Home</a>
       </li>
       <li class="govuk-breadcrumbs__list-item">
-        <a class="govuk-breadcrumbs__link" href="#">Section</a>
-      </li>
-      <li class="govuk-breadcrumbs__list-item">
-        <a class="govuk-breadcrumbs__link">Subsection</a>
+        <a class="govuk-breadcrumbs__link">{{ serviceName }}</a>
       </li>
     </ol>
   </div>
