--- a/app/views/current/views/tenancy-length-condition.html
+++ b/app/views/current/views/tenancy-length-condition.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You may be eligible for a large countryside productivity grant
+  You may be able to apply for a large countryside productivity grant
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,10 +14,10 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
-        You may be eligible for a large countryside productivity grant
+        You may be able to apply for a large countryside productivity grant
       </h1>
 
-      <p>To be considered eligible for a large countryside productivity grant scheme, you would need to secure an extension to your tenancy agreement prior to submitting a full application.</p>
+      <p>To apply for a grant, you would need to secure an extension to your tenancy agreement prior to submitting a full application.</p>
 
       <form class="form" action="project-cost" method="post">
 
